--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Motivation</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="description_idea_image">Idea image</string>
     <string name="description_create_new_idea">Create new idea</string>
     <string name="edit">Edit</string>
@@ -19,6 +19,7 @@
     <string name="create_new_idea">Create new idea</string>
     <string name="enter_the_idea_content">Enter the idea content</string>
     <string name="share_idea">Share idea</string>
+    <string name="link_is_empty">Link is empty</string>
     <string-array name="spinner" translatable="false">
         <item>http://</item>
         <item>https://</item>
