--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="description_idea_image">Idea image</string>
     <string name="description_create_new_idea">Create new idea</string>
-    <string name="edit">Edit</string>
+    <string name="edit">Edit name</string>
     <string name="delete">Delete</string>
     <string name="add_image">Add image</string>
     <string name="add_link">Add link</string>
@@ -20,11 +20,14 @@
     <string name="enter_the_idea_content">Enter the idea content</string>
     <string name="share_idea">Share idea</string>
     <string name="link_is_empty">Link is empty</string>
-    <string name="user_name">User name: %1$s</string>
+    <string name="user_name">Author name: %1$s</string>
     <string name="enter_your_name">Enter your name</string>
     <string name="name">Name</string>
     <string name="enter_new_name">Enter new name</string>
-    <string name="change_user_name">Change user name</string>
+    <string name="change_user_name">Change author name</string>
+    <string name="add_new_author">Add new author</string>
+    <string name="change_author">Change author</string>
+    <string name="choose_author">Choose author:</string>
     <string-array name="spinner" translatable="false">
         <item>http://</item>
         <item>https://</item>
